Use laravel ui to generate auth files

--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,23 @@
-/vendor/
+# Node
 node_modules/
 npm-debug.log
 yarn-error.log
 
-# Laravel 4 specific
-bootstrap/compiled.php
-app/storage/
-
 # Laravel 5 & Lumen specific
 public/storage
 public/hot
-
-# Laravel 5 & Lumen specific with changed public path
 public_html/storage
 public_html/hot
 
-storage/*.key
+# Laravel
+/storage/*.key
+/vendor
 .env
-Homestead.yaml
 Homestead.json
-/.vagrant
+Homestead.yaml
 .phpunit.result.cache
+/.vagrant
+
+# Generated (Laravel Mix) JS/CSS resources
+public/css
+public/js
